--- a/Views/Clientes/Create.cshtml
+++ b/Views/Clientes/Create.cshtml
@@ -1,12 +1,10 @@
 ﻿@model ProjetoGestao.Models.Cliente
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar Cliente";
 }
 
-<h1>Create</h1>
-
-<h4>Cliente</h4>
+<h4 class="mt-5">Criar Cliente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
