--- a/Views/ColaboradoresProjetoes/Create.cshtml
+++ b/Views/ColaboradoresProjetoes/Create.cshtml
@@ -1,12 +1,10 @@
 ﻿@model ProjetoGestao.Models.ColaboradoresProjeto
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar ColaboradoresProjeto";
 }
 
-<h1>Create</h1>
-
-<h4>ColaboradoresProjeto</h4>
+<h4 class="mt-5">Criar ColaboradoresProjeto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
