--- a/Views/ColaboradoresProjetoes/Details.cshtml
+++ b/Views/ColaboradoresProjetoes/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model ProjetoGestao.Models.ColaboradoresProjeto
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes ColaboradoresProjeto";
 }
 
-<h1>Details</h1>
+<h4 class="mt-5">Detalhes ColaboradoresProjeto</h4>
 
 <div>
-    <h4>ColaboradoresProjeto</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
