--- a/Views/ColaboradoresProjetoes/Edit.cshtml
+++ b/Views/ColaboradoresProjetoes/Edit.cshtml
@@ -1,12 +1,10 @@
 ﻿@model ProjetoGestao.Models.ColaboradoresProjeto
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar ColaboradoresProjeto";
 }
 
-<h1>Edit</h1>
-
-<h4>ColaboradoresProjeto</h4>
+<h4 class="mt-5">Editar ColaboradoresProjeto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
