--- a/Views/Colaboradors/Create.cshtml
+++ b/Views/Colaboradors/Create.cshtml
@@ -1,12 +1,10 @@
 ﻿@model ProjetoGestao.Models.Colaborador
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar Colaborador";
 }
 
-<h1>Create</h1>
-
-<h4>Colaborador</h4>
+<h4 class="mt-5">Criar Colaborador</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
