--- a/Views/Colaboradors/Details.cshtml
+++ b/Views/Colaboradors/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model ProjetoGestao.Models.Colaborador
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes Colaborador";
 }
 
-<h1>Details</h1>
+<h4 class="mt-5">Detalhes Colaborador</h4>
 
 <div>
-    <h4>Colaborador</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
