--- a/Views/Colaboradors/Edit.cshtml
+++ b/Views/Colaboradors/Edit.cshtml
@@ -1,12 +1,10 @@
 ﻿@model ProjetoGestao.Models.Colaborador
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Colaborador";
 }
 
-<h1>Edit</h1>
-
-<h4>Colaborador</h4>
+<h4 class="mt-5">Editar Colaborador</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
