--- a/Views/Funcaos/Create.cshtml
+++ b/Views/Funcaos/Create.cshtml
@@ -1,12 +1,10 @@
 ﻿@model ProjetoGestao.Models.Funcao
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar Funcao";
 }
 
-<h1>Create</h1>
-
-<h4>Funcao</h4>
+<h4 class="mt-5">Criar Funcao</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
