--- a/Views/Funcaos/Details.cshtml
+++ b/Views/Funcaos/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model ProjetoGestao.Models.Funcao
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes Funcao";
 }
 
-<h1>Details</h1>
+<h4 class="mt-5">Detalhes Funcao</h4>
 
 <div>
-    <h4>Funcao</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
