--- a/Views/Funcaos/Edit.cshtml
+++ b/Views/Funcaos/Edit.cshtml
@@ -1,12 +1,10 @@
 ﻿@model ProjetoGestao.Models.Funcao
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Funcao";
 }
 
-<h1>Edit</h1>
-
-<h4>Funcao</h4>
+<h4 class="mt-5">Editar Funcao</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
