--- a/Views/Projetoes/Create.cshtml
+++ b/Views/Projetoes/Create.cshtml
@@ -1,12 +1,10 @@
 ﻿@model ProjetoGestao.Models.Projeto
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar Projeto";
 }
 
-<h1>Create</h1>
-
-<h4>Projeto</h4>
+<h4 class="mt-5">Criar Projeto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
