--- a/Views/Projetoes/Details.cshtml
+++ b/Views/Projetoes/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model ProjetoGestao.Models.Projeto
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes Projeto";
 }
 
-<h1>Details</h1>
+<h4 class="mt-5">Detalhes Projeto</h4>
 
 <div>
-    <h4>Projeto</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
