--- a/Views/Projetoes/Edit.cshtml
+++ b/Views/Projetoes/Edit.cshtml
@@ -1,12 +1,10 @@
 ﻿@model ProjetoGestao.Models.Projeto
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Projeto";
 }
 
-<h1>Edit</h1>
-
-<h4>Projeto</h4>
+<h4 class="mt-5">Editar Projeto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
