--- a/Views/Relatorios/Create.cshtml
+++ b/Views/Relatorios/Create.cshtml
@@ -1,12 +1,10 @@
 ﻿@model ProjetoGestao.Models.Relatorio
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar Relatorio";
 }
 
-<h1>Create</h1>
-
-<h4>Relatorio</h4>
+<h4 class="mt-5">Criar Relatorio</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
