--- a/Views/Relatorios/Details.cshtml
+++ b/Views/Relatorios/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model ProjetoGestao.Models.Relatorio
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes Relatorio";
 }
 
-<h1>Details</h1>
+<h4 class="mt-5">Detalhes Relatorio</h4>
 
 <div>
-    <h4>Relatorio</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
