--- a/Views/Tarefas/Create.cshtml
+++ b/Views/Tarefas/Create.cshtml
@@ -1,12 +1,10 @@
 ﻿@model ProjetoGestao.Models.Tarefa
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar Tarefa";
 }
 
-<h1>Create</h1>
-
-<h4>Tarefa</h4>
+<h4 class="mt-5">Criar Tarefa</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
