--- a/Views/Tarefas/Details.cshtml
+++ b/Views/Tarefas/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model ProjetoGestao.Models.Tarefa
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes Tarefa";
 }
 
-<h1>Details</h1>
+<h4 class="mt-5">Detalhes Tarefa</h4>
 
 <div>
-    <h4>Tarefa</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
