--- a/Views/Clientes/Edit.cshtml
+++ b/Views/Clientes/Edit.cshtml
@@ -1,12 +1,10 @@
 ﻿@model ProjetoGestao.Models.Cliente
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Cliente";
 }
 
-<h1>Edit</h1>
-
-<h4>Cliente</h4>
+<h4 class="mt-5">Editar Cliente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
