--- a/Views/ColaboradoresProjetoes/Delete.cshtml
+++ b/Views/ColaboradoresProjetoes/Delete.cshtml
@@ -1,30 +1,28 @@
 ﻿@model ProjetoGestao.Models.ColaboradoresProjeto
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar ColaboradoresProjeto";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h4 class="mt-5">Eliminar ColaboradoresProjeto</h4>
+<h3>Tem a certeza que pretende eliminar?</h3>
 <div>
-    <h4>ColaboradoresProjeto</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Projeto)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Projeto.DataEfetivaFim)
-        </dd class>
-        <dt class = "col-sm-2">
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Colaborador)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Colaborador.Apelido)
-        </dd class>
+        </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="ProjetoId" />
         <input type="hidden" asp-for="ColaboradorId" />
