--- a/Views/ColaboradoresProjetoes/Index.cshtml
+++ b/Views/ColaboradoresProjetoes/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<ProjetoGestao.Models.ColaboradoresProjeto>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "ColaboradoresProjeto";
 }
 
-<h1>Index</h1>
+<h2 class="mt-5">ColaboradoresProjeto</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar ColaboradorProjeto</a>
 </p>
 <table class="table">
     <thead>
