--- a/Views/Colaboradors/Index.cshtml
+++ b/Views/Colaboradors/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<ProjetoGestao.Models.Colaborador>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Colaboradores";
 }
 
-<h1>Index</h1>
+<h2 class="mt-5">Colaboradores</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar Colaborador</a>
 </p>
 <table class="table">
     <thead>
@@ -67,9 +67,9 @@
                 @Html.DisplayFor(modelItem => item.Funcao.NomeFuncao)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ColaboradorId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ColaboradorId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ColaboradorId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ColaboradorId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.ColaboradorId">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.ColaboradorId">Eliminar</a>
             </td>
         </tr>
 }
