--- a/Views/Funcaos/Delete.cshtml
+++ b/Views/Funcaos/Delete.cshtml
@@ -1,24 +1,22 @@
 ﻿@model ProjetoGestao.Models.Funcao
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar Funcao";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h4 class="mt-5">Eliminar Funcao</h4>
+<h3>Tem a certeza que pretende eliminar?</h3>
 <div>
-    <h4>Funcao</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NomeFuncao)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NomeFuncao)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="FuncaoId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
