--- a/Views/Funcaos/Index.cshtml
+++ b/Views/Funcaos/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<ProjetoGestao.Models.Funcao>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Funcoes";
 }
 
-<h1>Index</h1>
+<h2 class="mt-5">Funcoes</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar Funcao</a>
 </p>
 <table class="table">
     <thead>
@@ -25,9 +25,9 @@
                 @Html.DisplayFor(modelItem => item.NomeFuncao)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.FuncaoId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.FuncaoId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.FuncaoId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.FuncaoId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.FuncaoId">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.FuncaoId">Eliminar</a>
             </td>
         </tr>
 }
