--- a/Views/Gestors/Create.cshtml
+++ b/Views/Gestors/Create.cshtml
@@ -1,12 +1,10 @@
 ﻿@model ProjetoGestao.Models.Gestor
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar Gestor";
 }
 
-<h1>Create</h1>
-
-<h4>Gestor</h4>
+<h4 class="mt-5">Criar Gestor</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
