--- a/Views/Gestors/Details.cshtml
+++ b/Views/Gestors/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model ProjetoGestao.Models.Gestor
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes Gestor";
 }
 
-<h1>Details</h1>
+<h4 class="mt-5">Detalhes Gestor</h4>
 
 <div>
-    <h4>Gestor</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
