--- a/Views/Gestors/Index.cshtml
+++ b/Views/Gestors/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<ProjetoGestao.Models.Gestor>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Gestores";
 }
 
-<h1>Index</h1>
+<h2 class="mt-5">Gestores</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar Gestor</a>
 </p>
 <table class="table">
     <thead>
@@ -67,9 +67,9 @@
                 @Html.DisplayFor(modelItem => item.ExperienciaComoGestor)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.GestorId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.GestorId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.GestorId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.GestorId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.GestorId">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.GestorId">Eliminar</a>
             </td>
         </tr>
 }
