--- a/Views/Projetoes/Index.cshtml
+++ b/Views/Projetoes/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<ProjetoGestao.Models.Projeto>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Projetos";
 }
 
-<h1>Index</h1>
+<h2 class="mt-5">Projetos</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar Projeto</a>
 </p>
 <table class="table">
     <thead>
@@ -67,9 +67,9 @@
                 @Html.DisplayFor(modelItem => item.Cliente.Apelido)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ProjetoId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ProjetoId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ProjetoId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ProjetoId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.ProjetoId">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.ProjetoId">Eliminar</a>
             </td>
         </tr>
 }
