--- a/Views/Relatorios/Delete.cshtml
+++ b/Views/Relatorios/Delete.cshtml
@@ -1,36 +1,34 @@
 ﻿@model ProjetoGestao.Models.Relatorio
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar Relatorio";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h4 class="mt-5">Eliminar Relatorio</h4>
+<h3>Tem a certeza que pretende eliminar?</h3>
 <div>
-    <h4>Relatorio</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NomeRelatorio)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NomeRelatorio)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DataEfetivaInicio)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DataEfetivaInicio)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Projeto)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Projeto.DataEfetivaFim)
-        </dd class>
+        </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="RelatorioId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
