--- a/Views/Relatorios/Index.cshtml
+++ b/Views/Relatorios/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<ProjetoGestao.Models.Relatorio>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Relatorios";
 }
 
-<h1>Index</h1>
+<h2 class="mt-5">Relatorios</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar Relatorio</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Projeto.DataEfetivaFim)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.RelatorioId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.RelatorioId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.RelatorioId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.RelatorioId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.RelatorioId">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.RelatorioId">Eliminar</a>
             </td>
         </tr>
 }
