--- a/Views/Tarefas/Edit.cshtml
+++ b/Views/Tarefas/Edit.cshtml
@@ -1,12 +1,10 @@
 ﻿@model ProjetoGestao.Models.Tarefa
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Tarefa";
 }
 
-<h1>Edit</h1>
-
-<h4>Tarefa</h4>
+<h4 class="mt-5">Editar Tarefa</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
