--- a/Views/Tarefas/Index.cshtml
+++ b/Views/Tarefas/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<ProjetoGestao.Models.Tarefa>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Tarefas";
 }
 
-<h1>Index</h1>
+<h2 class="mt-5">Tarefas</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar Tarefa</a>
 </p>
 <table class="table">
     <thead>
@@ -67,9 +67,9 @@
                 @Html.DisplayFor(modelItem => item.Projeto.DataEfetivaFim)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.TarefaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.TarefaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.TarefaId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.TarefaId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.TarefaId">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.TarefaId">Eliminar</a>
             </td>
         </tr>
 }
