Show a success message when edit Gestores, Funcao and Clientes

--- a/Views/Gestors/Edit.cshtml
+++ b/Views/Gestors/Edit.cshtml
@@ -48,7 +48,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ExperienciaComoGestor" class="control-label"></label>
-                <input asp-for="ExperienciaComoGestor" class="form-control" />
+                <textarea asp-for="ExperienciaComoGestor" class="form-control" rows="7"> </textarea>
                 <span asp-validation-for="ExperienciaComoGestor" class="text-danger"></span>
             </div>
             <div class="form-group">
