--- a/Views/Funcaos/Delete.cshtml
+++ b/Views/Funcaos/Delete.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Eliminar Funcao";
 }
 
-<h4 class="mt-5">Eliminar Funcao</h4>
-<h3>Tem a certeza que pretende eliminar?</h3>
+<h4 class="mt-5">Eliminar Função</h4>
+<h3 class="text-danger">Tem a certeza que pretende eliminar?</h3>
 <div>
     <hr />
     <dl class="row">
@@ -20,6 +20,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="FuncaoId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
