--- a/Views/Gestors/Create.cshtml
+++ b/Views/Gestors/Create.cshtml
@@ -50,16 +50,14 @@
                 <input asp-for="ExperienciaComoGestor" class="form-control" />
                 <span asp-validation-for="ExperienciaComoGestor" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-2">
+                <input type="submit" value="Create" class="btn btn-primary" />|
+                <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
