--- a/Views/Projetoes/Delete.cshtml
+++ b/Views/Projetoes/Delete.cshtml
@@ -61,7 +61,7 @@
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="ProjetoId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />|
+        <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
