Adicionar botão "Relatorio" e "Tarefas" na Pagina Index do Projeto e modificar o nome de alguns botões para pt

--- a/Views/ColaboradoresProjetoes/Delete.cshtml
+++ b/Views/ColaboradoresProjetoes/Delete.cshtml
@@ -26,7 +26,7 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="ProjetoId" />
         <input type="hidden" asp-for="ColaboradorId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
