--- a/Views/ColaboradoresProjetoes/Edit.cshtml
+++ b/Views/ColaboradoresProjetoes/Edit.cshtml
@@ -13,7 +13,7 @@
             <input type="hidden" asp-for="ProjetoId" />
             <input type="hidden" asp-for="ColaboradorId" />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Editar" class="btn btn-primary" />
             </div>
         </form>
     </div>
