--- a/Views/Relatorios/Create.cshtml
+++ b/Views/Relatorios/Create.cshtml
@@ -24,8 +24,8 @@
                 <label asp-for="ProjetoId" class="control-label"></label>
                 <select asp-for="ProjetoId" class ="form-control" asp-items="ViewBag.ProjetoId"></select>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-2">
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
