--- a/Views/Clientes/Create.cshtml
+++ b/Views/Clientes/Create.cshtml
@@ -41,7 +41,7 @@
                 <span asp-validation-for="Genero" class="text-danger"></span>
             </div>
             <div class="form-group mt-2">
-                <input type="submit" value="Create" class="btn btn-primary" />|
+                <input type="submit" value="Criar" class="btn btn-primary" />|
                 <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
             </div>
         </form>
