--- a/Views/Clientes/Delete.cshtml
+++ b/Views/Clientes/Delete.cshtml
@@ -49,7 +49,7 @@
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="ClienteId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
         <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
