--- a/Views/ColaboradoresProjetoes/Create.cshtml
+++ b/Views/ColaboradoresProjetoes/Create.cshtml
@@ -19,7 +19,7 @@
                 <select asp-for="ColaboradorId" class ="form-control" asp-items="ViewBag.ColaboradorId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
