--- a/Views/Colaboradors/Create.cshtml
+++ b/Views/Colaboradors/Create.cshtml
@@ -50,7 +50,7 @@
                 <select asp-for="FuncaoId" class ="form-control" asp-items="ViewBag.FuncaoId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
