--- a/Views/Gestors/Edit.cshtml
+++ b/Views/Gestors/Edit.cshtml
@@ -52,7 +52,7 @@
                 <span asp-validation-for="ExperienciaComoGestor" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />|
+                <input type="submit" value="Editar" class="btn btn-primary" />|
                 <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
             </div>
         </form>
