--- a/Views/Projetoes/Create.cshtml
+++ b/Views/Projetoes/Create.cshtml
@@ -49,7 +49,7 @@
                 <select asp-for="ClienteId" class ="form-control" asp-items="ViewBag.ClienteId"></select>
             </div>
             <div class="form-group mt-2">
-                <input type="submit" value="Create" class="btn btn-primary" />|
+                <input type="submit" value="Criar" class="btn btn-primary" />|
                 <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
             </div>
         </form>
