--- a/Views/Tarefas/Delete.cshtml
+++ b/Views/Tarefas/Delete.cshtml
@@ -61,7 +61,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="TarefaId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
