--- a/Views/Projetoes/Index.cshtml
+++ b/Views/Projetoes/Index.cshtml
@@ -61,10 +61,10 @@
                 @Html.DisplayFor(modelItem => item.DataPrevistaFim)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Gestor.Apelido)
+                @Html.DisplayFor(modelItem => item.Gestor.NomeGestor)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cliente.Apelido)
+                @Html.DisplayFor(modelItem => item.Cliente.NomeCliente)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ProjetoId">Editar</a> |
