--- a/Views/Projetoes/Details.cshtml
+++ b/Views/Projetoes/Details.cshtml
@@ -60,6 +60,10 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ProjetoId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.ProjetoId" class="btn btn-secondary">Editar</a> |
+    <a asp-controller="Tarefas" asp-action="Index" class="btn btn-secondary">Ver Tarefas</a>|
+    <a asp-controller="Relatorios" asp-action="Index" class="btn btn-secondary">Ver Relatorio</a>
+</div>
+<div class="m-3">
+    <a asp-action="Index" class="btn btn-secondary">Voltar Atrás</a>
 </div>
